--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -43,47 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "da08d18a-d0eb-417d-8bdb-104fd734c09b",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "292152\n",
-      "9130\n"
+     "ename": "TypeError",
+     "evalue": "getDataset() got an unexpected keyword argument 'doShuffle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# tuples de loss et leur coef\u001b[39;00m\n\u001b[1;32m     12\u001b[0m losses \u001b[38;5;241m=\u001b[39m [(torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mL1Loss(),\u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m     13\u001b[0m           (imp\u001b[38;5;241m.\u001b[39mloss\u001b[38;5;241m.\u001b[39mperceptualVGG,\u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m     14\u001b[0m           (imp\u001b[38;5;241m.\u001b[39mloss\u001b[38;5;241m.\u001b[39mtotalVariation,\u001b[38;5;241m1\u001b[39m)]\n\u001b[0;32m---> 16\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mallDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(dataset))\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m#dataset,_ = torch.utils.data.random_split(dataset, [640, len(dataset)-640])\u001b[39;00m\n",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36mallDataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mallDataset\u001b[39m():\n\u001b[1;32m      2\u001b[0m     datasets \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m     datasets\u001b[38;5;241m.\u001b[39mappend(\u001b[43mimp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./data/utk\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mfactorResize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mdoShuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43mdoCrop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m)\n\u001b[1;32m      4\u001b[0m     datasets\u001b[38;5;241m.\u001b[39mappend(imp\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mgetDataset(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/flickr\u001b[39m\u001b[38;5;124m\"\u001b[39m,factorResize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,doShuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,doCrop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n\u001b[1;32m      5\u001b[0m     datasets\u001b[38;5;241m.\u001b[39mappend(imp\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mgetDataset(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/lfw\u001b[39m\u001b[38;5;124m\"\u001b[39m,factorResize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,doShuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: getDataset() got an unexpected keyword argument 'doShuffle'"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60106610e89c49fbb35d8e38b120e819",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training progress:   0%|          | 0/15 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "385a9b1d86f7450b8581e7f3dceb4281",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/9130 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -197,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
